修改树结构查询方法的问题； 修改group表明报错的问题；